--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,3 +24,6 @@
 {% else %}
   <meta name="twitter:image" content="{{ '/assets/images/default-image.jpg' | absolute_url }}">
 {% endif %}
+
+
+{% seo %}
