--- a/styles.css
+++ b/styles.css
@@ -583,7 +583,7 @@ html body.dark-mode {
 .dark-mode nav,
 body.dark-mode nav,
 html body.dark-mode nav {
-  background-color: #1a2639;
+  background-color: #000000;
 }
 
 .dark-mode nav a:hover,
