--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@
   --card-dark: #462e07;
   --border-light: #462e07;
   --border-dark: #462e07;
-  --meta-light: #777;
-  --meta-dark: #9ca3af;
+  --meta-light: #ffffff;
+  --meta-dark: #ffffff;
   --heading-light: #f6f6f3;
   --heading-dark: #f6f6f3;
   --shadow-light: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -637,7 +637,7 @@ html body.dark-mode nav a:hover {
 
 .dark-mode #search-input:focus {
   border-color: var(--primary-accent);
-  box-shadow: 0 0 5px rgba(96, 165, 250, 0.3);
+  box-shadow: 0 0 5px #1646014d;
 }
 
 .dark-mode #search-results {
@@ -659,7 +659,7 @@ html body.dark-mode nav a:hover {
 }
 
 .dark-mode .dark-mode-toggle:hover {
-  background-color: #3b82f6;
+  background-color: #eaf63b;
 }
 
 .dark-mode .audio-container,
@@ -682,7 +682,7 @@ html body.dark-mode nav a:hover {
 }
 
 .dark-mode .essay-content blockquote {
-  color: #d1d5db;
+  color: var(--text-dark
   border-left-color: var(--primary-accent);
 }
 
@@ -697,7 +697,7 @@ html body.dark-mode nav a:hover {
 .dark-mode .essay-content pre,
 .dark-mode .essay-content code {
   background-color: var(--border-dark);
-  border-color: #4b5563;
+  border-color: var(--border-dark);
   color: var(--text-dark);
 }
 
@@ -707,7 +707,7 @@ html body.dark-mode nav a:hover {
 
 .dark-mode .essay-content th,
 .dark-mode .essay-content td {
-  border-bottom-color: #4b5563;
+  border-bottom-color: var(--border-dark);
 }
 
 /* Media Queries */
@@ -902,7 +902,7 @@ html body.dark-mode nav a:hover {
   }
   
   body:not(.light-mode) nav {
-    background-color: #1a2639;
+    background-color: var(--secondary-color);
   }
   
   body:not(.light-mode) nav a:hover {
